crates/slideforge-layout/src/snapshots/slideforge_layout__regions__tests__bio_slide_regions.snap
---
source: crates/slideforge-layout/src/regions.rs
expression: frames
---
[
    Frame {
        bbox: BoundingBox {
            x: Emu(
                457200,
            ),
            y: Emu(
                457200,
            ),
            width: Emu(
                2743200,
            ),
            height: Emu(
                4114800,
            ),
        },
        content: Image {
            alt: "",
        },
        text_flow: None,
    },
    Frame {
        bbox: BoundingBox {
            x: Emu(
                3657600,
            ),
            y: Emu(
                457200,
            ),
            width: Emu(
                5029200,
            ),
            height: Emu(
                4114800,
            ),
        },
        content: Empty,
        text_flow: None,
    },
]
