crates/slideforge-layout/src/snapshots/slideforge_layout__regions__tests__closing_slide_regions.snap
---
source: crates/slideforge-layout/src/regions.rs
expression: frames
---
[
    Frame {
        bbox: BoundingBox {
            x: Emu(
                457200,
            ),
            y: Emu(
                1600200,
            ),
            width: Emu(
                8229600,
            ),
            height: Emu(
                1143000,
            ),
        },
        content: Empty,
        text_flow: None,
        region_role: Some(
            Title,
        ),
    },
    Frame {
        bbox: BoundingBox {
            x: Emu(
                457200,
            ),
            y: Emu(
                2743200,
            ),
            width: Emu(
                8229600,
            ),
            height: Emu(
                914400,
            ),
        },
        content: Empty,
        text_flow: None,
        region_role: Some(
            Subtitle,
        ),
    },
]
