crates/slideforge-layout/src/snapshots/slideforge_layout__regions__tests__quote_slide_regions.snap
---
source: crates/slideforge-layout/src/regions.rs
expression: frames
---
[
    Frame {
        bbox: BoundingBox {
            x: Emu(
                914400,
            ),
            y: Emu(
                1188720,
            ),
            width: Emu(
                7315200,
            ),
            height: Emu(
                2286000,
            ),
        },
        content: Empty,
        text_flow: None,
        region_role: Some(
            Body,
        ),
    },
    Frame {
        bbox: BoundingBox {
            x: Emu(
                914400,
            ),
            y: Emu(
                3657600,
            ),
            width: Emu(
                7315200,
            ),
            height: Emu(
                685800,
            ),
        },
        content: Empty,
        text_flow: None,
        region_role: Some(
            Generic,
        ),
    },
]
