crates/slideforge-layout/src/snapshots/slideforge_layout__regions__tests__section_break_slide_regions.snap
---
source: crates/slideforge-layout/src/regions.rs
expression: frames
---
[
    Frame {
        bbox: BoundingBox {
            x: Emu(
                457200,
            ),
            y: Emu(
                1737360,
            ),
            width: Emu(
                8229600,
            ),
            height: Emu(
                1371600,
            ),
        },
        content: Empty,
        text_flow: None,
        region_role: Some(
            Title,
        ),
    },
    Frame {
        bbox: BoundingBox {
            x: Emu(
                457200,
            ),
            y: Emu(
                3200400,
            ),
            width: Emu(
                8229600,
            ),
            height: Emu(
                914400,
            ),
        },
        content: Empty,
        text_flow: None,
        region_role: Some(
            Subtitle,
        ),
    },
]
